--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
