--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
+    "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^2.2.0",
+    "react-tsparticles": "^2.12.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
